<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BF4 Loadout Saver</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_options">Options</string>
    <string name="message_successfully_saved_loadout">Successfully saved Loadout</string>
    <string name="message_failed_to_save_loadout">Failed to save Loadout with Code: </string>
    <string name="message_successfully_sent_loadout">Successfully sent Loadout</string>
    <string name="message_failed_to_send_loadout">Failed to send Loadout with Code: </string>
    <string name="message_failed_to_login">Failed to login with Code: </string>
    <string name="loadoutNameHint">Name for the current Loadout</string>
    <string name="wholeLoadout">All</string>
    <string name="infantryOnly">Infantry</string>
    <string name="vehicleOnly">Vehicle</string>
    <string name="message_no_connection">No Internet connection</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="feedback">Give Feedback</string>
    <string name="abort">Abort</string>
    <string name="finished">Done</string>
    <string name="screenlock_option">Keep the screen on</string>
    <string name="option_analyse">Analyse Loadouts for testing</string>
    <string name="instruction">Instruction</string>
    <string name="report">Report</string>
    <string name="loadout_weapons">Weapons</string>
    <string name="loadout_kits">Kits (Weapons and equipment for each class)</string>
    <string name="loadout_vehicles">Vehicles</string>
    <string name="loadout_parts_explanation">Choose the loadout-parts to store</string>
    <string name="reset_login">Reset Logininfo</string>

    <color name="green">#00FF00</color>
    <color name="red">#FF0000</color>

    <string name="status_not_logged_in">Not logged in yet</string>
    <string name="pick_color">Pick a color</string>
    <string name="allow_mix_loadouts">Allow to mix Loadouts from different soldiers (risky)</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>

</resources>
