<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="377dp" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Battlelog Email"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/edit_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:singleLine="true" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Battlelog Password"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/edit_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:singleLine="true" />

	    <CheckBox
	        android:id="@+id/checkBox_analyse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/option_analyse"
	        android:visibility="invisible" />
	    
	    <CheckBox
	        android:id="@+id/checkBox_screenlock"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/screenlock_option" />

	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="save"
	        android:text="@string/finsihed" />

	    <Button
	        android:id="@+id/button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="abort"
	        android:text="@string/abort" />

	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:visibility="invisible" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/feedback" 
	        android:onClick="feedback"/>
	
	</TableLayout>
</ScrollView>